--- a/app/src/main/assets/ZipUtility3_Desc_EN_Short.htm
+++ b/app/src/main/assets/ZipUtility3_Desc_EN_Short.htm
@@ -43,7 +43,8 @@
 	font-size:10.5pt;
 	font-family:"Century","serif";}
 h1
-	{margin-top:0cm;
+	{mso-style-link:"見出し 1 \(文字\)";
+	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:0cm;
 	margin-left:21.25pt;
@@ -323,6 +324,29 @@ span.a
 	{mso-style-name:"見出しマップ \(文字\)";
 	mso-style-link:見出しマップ;
 	font-family:"MS UI Gothic";}
+span.1
+	{mso-style-name:"見出し 1 \(文字\)";
+	mso-style-link:"見出し 1";
+	font-family:"Arial","sans-serif";
+	text-decoration:underline;}
+p.10, li.10, div.10
+	{mso-style-name:スタイル1;
+	mso-style-link:"スタイル1 \(文字\)";
+	margin-top:0cm;
+	margin-right:0cm;
+	margin-bottom:6.0pt;
+	margin-left:21.3pt;
+	text-align:justify;
+	text-justify:inter-ideograph;
+	text-indent:-21.3pt;
+	font-size:12.0pt;
+	font-family:"Century","serif";}
+span.1105pt
+	{mso-style-name:"スタイル スタイル1 + 10\.5 pt";
+	font-family:"Century","serif";}
+span.11
+	{mso-style-name:"スタイル1 \(文字\)";
+	mso-style-link:スタイル1;}
 .MsoChpDefault
 	{font-size:10.0pt;}
  /* Page Definitions */
@@ -402,9 +426,123 @@ file name)</p>
 the ZIP file with a tiny file manager, please select the ZipUtility3 from the
 app to open tap the ZIP file in the other file manager.</span></p>
 
+<h1 style='margin-top:18.0pt'><span style='text-decoration:none'>2.<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Screen
+Description</h1>
+
+<p class=MsoNormal>Select an item and tap the icon to operate on the
+directory/file. Tap and hold the icon to display an explanation.</p>
+
+<p class=MsoNormal><img width=404 height=366 id="図 2"
+src="ZipUtility3_Desc_EN_Short.files/image003.png"></p>
+
+<h2 style='margin-top:18.0pt'><u><span style='font-size:14.0pt'>2.1 Description
+of the local folder icon</span></u></h2>
+
+<p class=10CxSpFirst style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
+id="図 4" src="ZipUtility3_Desc_EN_Short.files/image004.png"
+alt="context_button_clear"><span class=1105pt>&nbsp;Creating a Directory or
+File</span></span></p>
+
+<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
+id="図 5" src="ZipUtility3_Desc_EN_Short.files/image005.png"
+alt="context_button_share_dark"><span class=1105pt>&nbsp;Share the selected
+item.</span></span></p>
+
+<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
+id="図 6" src="ZipUtility3_Desc_EN_Short.files/image006.png"
+alt="context_button_rename"><span class=1105pt>&nbsp;Rename the selected item.</span></span></p>
+
+<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
+id="図 7" src="ZipUtility3_Desc_EN_Short.files/image007.png"
+alt="context_button_paste"><span class=1105pt>&nbsp;Paste a copy or clipped
+item (the clipped item will be deleted when the pasting is complete)</span></span></p>
+
+<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span style='font-size:10.5pt'><img width=19 height=19
+src="ZipUtility3_Desc_EN_Short.files/image008.png" alt="context_button_copy"><span
+class=1105pt>&nbsp;Copy the selected items.</span></span></p>
+
+<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
+src="ZipUtility3_Desc_EN_Short.files/image009.png" alt="context_button_cut"><span
+class=1105pt>&nbsp;Cut the selected items.</span></span></p>
+
+<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
+id="図 10" src="ZipUtility3_Desc_EN_Short.files/image010.png"
+alt="context_button_archive"><span class=1105pt>&nbsp;Compress the selected
+items.</span></span></p>
+
+<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
+src="ZipUtility3_Desc_EN_Short.files/image011.png" alt="context_button_trash"><span
+class=1105pt>&nbsp;Removes the selected item.</span></span></p>
+
+<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
+width=23 height=23 src="ZipUtility3_Desc_EN_Short.files/image012.png"
+alt="context_button_select_all">&nbsp;Select All.</span></span></p>
+
+<p class=10CxSpLast style='margin-left:21.25pt;text-indent:-21.25pt;line-height:
+12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
+src="ZipUtility3_Desc_EN_Short.files/image013.png"
+alt="context_button_unselect_all"><span class=1105pt>&nbsp;Deselect everything.</span></span></p>
+
 <p class=MsoNormal>&nbsp;</p>
 
-<h1 style='margin-top:18.0pt'><span style='text-decoration:none'>2.<span
+<h2 style='margin-top:18.0pt'><u><span style='font-size:14.0pt'>2.2 Description
+of the ZIP folder icon</span></u></h2>
+
+<p class=MsoNormal><span class=1105pt><img width=23 height=23 id="図 18"
+src="ZipUtility3_Desc_EN_Short.files/image014.png" alt="context_button_clear">&nbsp;Create
+a ZIP file</span></p>
+
+<p class=MsoNormal><img width=22 height=22 id="図 16"
+src="ZipUtility3_Desc_EN_Short.files/image015.png" alt="context_button_open"><span
+class=1105pt>&nbsp;Open the ZIP file</span></p>
+
+<p class=MsoNormal style='margin-left:21.3pt;text-indent:-21.3pt'><img
+width=22 height=22 id="図 20" src="ZipUtility3_Desc_EN_Short.files/image007.png"
+alt="context_button_paste"><span class=1105pt>&nbsp;Paste a copy or clipped
+item (the clipped item will be deleted when the pasting is complete)</span></p>
+
+<p class=10CxSpFirst style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span style='font-size:10.5pt'><img width=19 height=19
+id="図 8" src="ZipUtility3_Desc_EN_Short.files/image016.png"
+alt="context_button_copy"><span class=1105pt>&nbsp;Copy the selected items.</span></span></p>
+
+<p class=10CxSpLast style='margin-left:21.25pt;text-indent:-21.25pt;line-height:
+12.0pt'><span style='font-size:10.5pt'><img width=22 height=22 id="図 9"
+src="ZipUtility3_Desc_EN_Short.files/image009.png" alt="context_button_cut"><span
+class=1105pt>&nbsp;Cut the selected items.</span></span></p>
+
+<p class=MsoNormal><span class=1105pt><img width=22 height=22 id="図 17"
+src="ZipUtility3_Desc_EN_Short.files/image017.png">&nbsp;Extract the selected
+items</span></p>
+
+<p class=10CxSpFirst style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span style='font-size:10.5pt'><img width=22 height=22
+id="図 11" src="ZipUtility3_Desc_EN_Short.files/image011.png"
+alt="context_button_trash"><span class=1105pt>&nbsp;Removes the selected item.</span></span></p>
+
+<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
+width=23 height=23 id="図 13" src="ZipUtility3_Desc_EN_Short.files/image012.png"
+alt="context_button_select_all">&nbsp;Select All.</span></span></p>
+
+<p class=10CxSpLast style='margin-left:21.25pt;text-indent:-21.25pt;line-height:
+12.0pt'><span style='font-size:10.5pt'><img width=22 height=22 id="図 12"
+src="ZipUtility3_Desc_EN_Short.files/image013.png"
+alt="context_button_unselect_all"><span class=1105pt>&nbsp;Deselect everything.</span></span></p>
+
+<p class=MsoNormal>&nbsp;</p>
+
+<h1 style='margin-top:18.0pt'><span style='text-decoration:none'>3.<span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Library</h1>
 
 <p class=MsoListParagraph style='margin-left:21.3pt;text-indent:-21.3pt;
