--- a/app/src/main/assets/ZipUtility3_Desc_JA_Short.htm
+++ b/app/src/main/assets/ZipUtility3_Desc_JA_Short.htm
@@ -173,6 +173,16 @@ p.MsoFooter, li.MsoFooter, div.MsoFooter
 	layout-grid-mode:char;
 	font-size:12.0pt;
 	font-family:"Century","serif";}
+p.MsoBodyText, li.MsoBodyText, div.MsoBodyText
+	{mso-style-link:"本文 \(文字\)";
+	margin-top:0cm;
+	margin-right:0cm;
+	margin-bottom:6.0pt;
+	margin-left:0cm;
+	text-align:justify;
+	text-justify:inter-ideograph;
+	font-size:12.0pt;
+	font-family:"Century","serif";}
 a:link, span.MsoHyperlink
 	{color:blue;
 	text-decoration:underline;}
@@ -255,6 +265,27 @@ span.3
 	mso-style-link:"見出し 3";
 	font-family:"Arial","sans-serif";
 	text-decoration:underline;}
+p.10, li.10, div.10
+	{mso-style-name:スタイル1;
+	mso-style-link:"スタイル1 \(文字\)";
+	margin-top:0cm;
+	margin-right:0cm;
+	margin-bottom:6.0pt;
+	margin-left:21.3pt;
+	text-align:justify;
+	text-justify:inter-ideograph;
+	text-indent:-21.3pt;
+	font-size:12.0pt;
+	font-family:"Century","serif";}
+span.1105pt
+	{mso-style-name:"スタイル スタイル1 + 10\.5 pt";
+	font-family:"Century","serif";}
+span.a1
+	{mso-style-name:"本文 \(文字\)";
+	mso-style-link:本文;}
+span.11
+	{mso-style-name:"スタイル1 \(文字\)";
+	mso-style-link:スタイル1;}
 .MsoChpDefault
 	{font-size:10.0pt;}
  /* Page Definitions */
@@ -282,18 +313,17 @@ ul
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span><span
 lang=JA style='font-family:"ＭＳ ゴシック"'>機能</span></h1>
 
-<p class=MsoNormal style='word-break:break-all'>Zip<span lang=JA
-style='font-family:"ＭＳ 明朝","serif"'>ファイルの編集・抽出を行うアプリです、パスワード保護</span>Zip<span
+<p class=MsoNormal>Zip<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>ファイルの編集・抽出を行うアプリです、パスワード保護</span>Zip<span
 lang=JA style='font-family:"ＭＳ 明朝","serif"'>も使用できます。</span></p>
 
-<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt;
-word-break:break-all'><span style='font-family:Symbol'><img width=11 height=11
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>Zip<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>ZIP<span
 lang=JA style='font-family:"ＭＳ 明朝","serif"'>ファイルの作成・解凍・閲覧</span></p>
 
-<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt;
-word-break:break-all'><span style='font-family:Symbol'><img width=11 height=11
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span
 lang=JA style='font-family:"ＭＳ 明朝","serif"'>パスワード保護</span>(Zip<span lang=JA
@@ -303,96 +333,201 @@ style='font-family:"ＭＳ 明朝","serif"'>ビット暗号化</span>)<span lang=JA
 style='font-family:"ＭＳ 明朝","serif"'>された</span> Zip<span lang=JA
 style='font-family:"ＭＳ 明朝","serif"'>ファイルの解凍・作成</span></p>
 
-<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt;
-word-break:break-all'><span style='font-family:Symbol'><img width=11 height=11
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span
 lang=JA style='font-family:"ＭＳ 明朝","serif"'>圧縮せず格納するファイル拡張子を指定可能（省略時値は</span>jpg,mpg,mp4,mp4,pdf<span
 lang=JA style='font-family:"ＭＳ 明朝","serif"'>など）</span></p>
 
-<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt;
-word-break:break-all'><span style='font-family:Symbol'><img width=11 height=11
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span>MicroSD/USB
 Flash<span lang=JA style='font-family:"ＭＳ 明朝","serif"'>からの読込と保存に対応</span></p>
 
-<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt;
-word-break:break-all'><span style='font-family:Symbol'><img width=11 height=11
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span
 lang=JA style='font-family:"ＭＳ 明朝","serif"'>日本語ファイル名に対応（自動判別と直接指定可能）</span></p>
 
-<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt;
-word-break:break-all'><span style='font-family:Symbol'><img width=11 height=11
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span
 lang=JA style='font-family:"ＭＳ 明朝","serif"'>外部アプリと連携して、他の一般的なファイルフォーマットも参照可能</span></p>
 
-<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt;
-word-break:break-all'><span style='font-family:Symbol'><img width=11 height=11
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span
 lang=JA style='font-family:"ＭＳ 明朝","serif"'>ローカルストレージ用の簡易ファイルマネージャー</span></p>
 
-<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt;
-word-break:break-all'><span style='font-family:Symbol'><img width=11 height=11
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span
 lang=JA style='font-family:"ＭＳ 明朝","serif"'>ローカルストレージと</span>ZIP<span lang=JA
 style='font-family:"ＭＳ 明朝","serif"'>ファイルとの間でコピー・カットができます</span></p>
 
-<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt;
-word-break:break-all'><span style='font-family:Symbol'><img width=11 height=11
+<p class=MsoListParagraph style='margin-left:36.0pt;text-indent:-18.0pt'><span
+style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
 style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span
 lang=JA style='font-family:"ＭＳ 明朝","serif"'>ローカルストレージと</span>ZIP<span lang=JA
 style='font-family:"ＭＳ 明朝","serif"'>ファイルでファイル名の検索</span>(<span lang=JA
 style='font-family:"ＭＳ 明朝","serif"'>結果リストでファイル名をタップするとディレクトリを表示します）</span></p>
 
-<p class=MsoNormal style='word-break:break-all'>&nbsp;</p>
+<p class=MsoNormal>&nbsp;</p>
 
-<p class=MsoNormal style='word-break:break-all'><span lang=JA style='font-family:
-"ＭＳ 明朝","serif"'>簡易ファイルマネージャーまたは、他のファイルマネージャーで</span>ZIP<span lang=JA
-style='font-family:"ＭＳ 明朝","serif"'>ファイルをタップし、開くアプリで</span>ZipUtility3<span
+<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>簡易ファイルマネージャーまたは、他のファイルマネージャーで</span>ZIP<span
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>ファイルをタップし、開くアプリで</span>ZipUtility3<span
 lang=JA style='font-family:"ＭＳ 明朝","serif"'>を選択してください。</span></p>
 
-<p class=MsoNormal style='word-break:break-all'>&nbsp;</p>
+<p class=MsoNormal>&nbsp;</p>
 
 <h1 style='margin-top:18.0pt'><a name="_Toc450110990"><span style='text-decoration:
 none'>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span><span
-lang=JA style='font-family:"ＭＳ ゴシック"'>使用ライブラリー</span></a></h1>
+lang=JA style='font-family:"ＭＳ ゴシック"'>画面説明</span></a></h1>
 
-<p class=MsoNormal style='page-break-after:avoid'><span lang=JA
-style='font-family:"ＭＳ 明朝","serif"'>下記のライブラリーを使用しています。</span></p>
+<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>項目を選択して、アイコンをタップしてディレクトリー</span>/<span
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>ファイルに対し操作を行います。アイコンを長押しすると説明が表示されます。</span></p>
 
-<p class=MsoListParagraph style='margin-left:21.3pt;text-indent:-21.3pt;
-page-break-after:avoid'><span style='font-family:Symbol'><img width=11
-height=11 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><a href="https://code.google.com/archive/p/juniversalchardet/">juniversalchardet
+<p class=MsoNormal><img width=398 height=362 id="図 1"
+src="ZipUtility3_Desc_JA_Short.files/image002.png"></p>
+
+<h2 style='margin-top:18.0pt'>2.1 <span lang=JA style='font-family:"ＭＳ ゴシック"'>ローカルフォルダーアイコンの説明</span></h2>
+
+<p class=10CxSpFirst style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
+width=23 height=23 id="図 4" src="ZipUtility3_Desc_JA_Short.files/image003.png"
+alt="context_button_clear"></span></span><span class=1105pt><span lang=JA
+style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>ディレクトリーまたはファイルの作成</span></span></p>
+
+<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
+width=23 height=23 id="図 5" src="ZipUtility3_Desc_JA_Short.files/image004.png"
+alt="context_button_share_dark"></span></span><span class=1105pt><span lang=JA
+style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択されている項目を共有します</span></span></p>
+
+<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
+width=23 height=23 id="図 6" src="ZipUtility3_Desc_JA_Short.files/image005.png"
+alt="context_button_rename"></span></span><span class=1105pt><span lang=JA
+style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択された項目を改名します</span></span></p>
+
+<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
+width=23 height=23 id="図 7" src="ZipUtility3_Desc_JA_Short.files/image006.png"
+alt="context_button_paste"></span></span><span class=1105pt><span lang=JA
+style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>コピーまたは切取った項目を貼付けます（切取った項目は貼付け終了後に削除されます）</span></span></p>
+
+<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
+width=19 height=19 id="図 8" src="ZipUtility3_Desc_JA_Short.files/image007.png"
+alt="context_button_copy"></span></span><span class=1105pt><span lang=JA
+style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択された項目をコピーします</span></span></p>
+
+<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
+width=23 height=23 id="図 9" src="ZipUtility3_Desc_JA_Short.files/image008.png"
+alt="context_button_cut"></span></span><span class=1105pt><span lang=JA
+style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択された項目を切取ります</span></span></p>
+
+<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
+width=23 height=23 id="図 10" src="ZipUtility3_Desc_JA_Short.files/image009.png"
+alt="context_button_archive"></span></span><span class=1105pt><span lang=JA
+style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択された項目を圧縮します</span></span></p>
+
+<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
+width=23 height=23 id="図 11" src="ZipUtility3_Desc_JA_Short.files/image010.png"
+alt="context_button_trash"></span></span><span class=1105pt><span lang=JA
+style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択された項目を削除します</span></span></p>
+
+<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
+line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
+width=23 height=23 id="図 13" src="ZipUtility3_Desc_JA_Short.files/image011.png"
+alt="context_button_select_all"></span></span><span class=1105pt><span lang=JA
+style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>全て選択する</span></span></p>
+
+<p class=10CxSpLast style='margin-left:21.25pt;text-indent:-21.25pt;line-height:
+12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img width=23
+height=23 id="図 12" src="ZipUtility3_Desc_JA_Short.files/image012.png"
+alt="context_button_unselect_all"></span></span><span class=1105pt><span
+lang=JA style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>全て選択解除する</span></span></p>
+
+<p class=MsoNormal>&nbsp;</p>
+
+<h2 style='margin-top:18.0pt'>2.1 ZIP<span lang=JA style='font-family:"ＭＳ ゴシック"'>フォルダーアイコンの説明</span></h2>
+
+<p class=MsoNormal><span class=1105pt><span style='font-size:10.5pt'><img
+width=23 height=23 id="図 18" src="ZipUtility3_Desc_JA_Short.files/image003.png"
+alt="context_button_clear">ZIP</span></span><span class=1105pt><span lang=JA
+style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>ファイルの作成</span></span></p>
+
+<p class=MsoNormal><span class=1105pt><span style='font-size:10.5pt'><img
+width=23 height=23 id="図 16" src="ZipUtility3_Desc_JA_Short.files/image013.png"
+alt="*">ZIP</span></span><span class=1105pt><span lang=JA style='font-size:
+10.5pt;font-family:"ＭＳ 明朝","serif"'>ファイルの読込</span></span></p>
+
+<p class=MsoNormal><span class=1105pt><span style='font-size:10.5pt'><img
+width=23 height=23 id="図 20" src="ZipUtility3_Desc_JA_Short.files/image006.png"
+alt="context_button_paste"></span></span><span class=1105pt><span lang=JA
+style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>コピーまたは切り取った項目を貼り付ける</span></span></p>
+
+<p class=MsoNormal><span class=1105pt><span style='font-size:10.5pt'><img
+width=19 height=19 id="図 21" src="ZipUtility3_Desc_JA_Short.files/image007.png"
+alt="context_button_copy"></span></span><span class=1105pt><span lang=JA
+style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択した項目をコピーする</span></span></p>
+
+<p class=MsoNormal><span class=1105pt><span style='font-size:10.5pt'><img
+width=23 height=23 id="図 22" src="ZipUtility3_Desc_JA_Short.files/image008.png"
+alt="context_button_cut"></span></span><span class=1105pt><span lang=JA
+style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択した項目を切取る（張り付けるまでは削除されません）</span></span></p>
+
+<p class=MsoNormal><span class=1105pt><span style='font-size:10.5pt'><img
+width=22 height=22 id="図 17" src="ZipUtility3_Desc_JA_Short.files/image014.png"></span></span><span
+class=1105pt><span lang=JA style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択した項目を展開する</span></span></p>
+
+<p class=MsoNormal><span class=1105pt><span style='font-size:10.5pt'><img
+width=23 height=23 id="図 23" src="ZipUtility3_Desc_JA_Short.files/image010.png"
+alt="context_button_trash"></span></span><span class=1105pt><span lang=JA
+style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択した項目を削除する</span></span></p>
+
+<p class=MsoNormal><span class=1105pt><span style='font-size:10.5pt'><img
+width=23 height=23 id="図 25" src="ZipUtility3_Desc_JA_Short.files/image011.png"
+alt="context_button_select_all"></span></span><span class=1105pt><span lang=JA
+style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>全てを選択する</span></span></p>
+
+<p class=MsoNormal><span class=1105pt><span style='font-size:10.5pt'><img
+width=23 height=23 id="図 24" src="ZipUtility3_Desc_JA_Short.files/image012.png"
+alt="context_button_unselect_all"></span></span><span class=1105pt><span
+lang=JA style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>全ての選択を解除する</span></span></p>
+
+<h1 style='margin-top:18.0pt'><span style='text-decoration:none'>3.<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span><span
+lang=JA style='font-family:"ＭＳ ゴシック"'>使用ライブラリー</span></h1>
+
+<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>下記のライブラリーを使用しています。</span></p>
+
+<p class=MsoListParagraph style='margin-left:48.0pt'><a
+href="https://code.google.com/archive/p/juniversalchardet/">juniversalchardet
 1.0.3</a></p>
 
-<p class=MsoListParagraph style='margin-left:21.3pt;text-indent:-21.3pt;
-page-break-after:avoid'><span style='font-family:Symbol'><img width=11
-height=11 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><a href="http://www.lingala.net/zip4j.html">Zip4J 2.2.3</a></p>
+<p class=MsoListParagraph style='margin-left:48.0pt'><a
+href="http://www.lingala.net/zip4j.html">Zip4J 2.2.3</a></p>
 
-<p class=MsoListParagraph style='margin-left:21.3pt;text-indent:-21.3pt;
-page-break-after:avoid'><span style='font-family:Symbol'><img width=11
-height=11 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><a
+<p class=MsoListParagraph style='margin-left:48.0pt'><a
 href="https://commons.apache.org/proper/commons-compress/index.html">Apache
 Commons Compress 1.20</a></p>
 
-<p class=MsoListParagraph style='margin-left:21.3pt;text-indent:-21.3pt;
-page-break-after:avoid'><span style='font-family:Symbol'><img width=11
-height=11 src="ZipUtility3_Desc_JA_Short.files/image001.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><a href="https://tukaani.org/xz/java.html">XZ-1.8</a></p>
+<p class=MsoListParagraph style='margin-left:48.0pt'><a
+href="https://tukaani.org/xz/java.html">XZ-1.8</a></p>
 
-<p class=MsoNormal style='page-break-after:avoid'>&nbsp;</p>
+<p class=MsoNormal>&nbsp;</p>
 
 </div>
 
