--- a/app/src/main/assets/ZipUtility3_Change_EN.htm
+++ b/app/src/main/assets/ZipUtility3_Change_EN.htm
@@ -340,6 +340,17 @@ name="_Toc386446736">Change history</a></h1>
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>2020/08/11 1.23</p>
+
+<p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
+left;text-indent:-21.25pt'><span style='font-family:Symbol'><img width=11
+height=11 src="ZipUtility3_Change_EN.files/image002.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Update help
+file.</p>
+
+<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
+text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>2020/07/08 1.22</p>
 
 <p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
@@ -396,8 +407,8 @@ src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
 left;text-indent:-21.25pt'><span style='font-family:Symbol'><img width=11
 height=11 src="ZipUtility3_Change_EN.files/image002.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Prevent
-application crash by the display of the ZIP file.</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Prevent application
+crash by the display of the ZIP file.</p>
 
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
@@ -491,8 +502,8 @@ src="ZipUtility3_Change_EN.files/image001.png" alt="*"><span style='font:7.0pt "
 <p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
 left;text-indent:-21.25pt'><span style='font-family:Symbol'><img width=11
 height=11 src="ZipUtility3_Change_EN.files/image002.png" alt="*"><span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Improved
-display of compression method in Property</p>
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span>Improved display
+of compression method in Property</p>
 
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
