Log管理更新の取り込み

--- a/app/src/main/assets/ZipUtility3_Desc_JA_Short.htm
+++ b/app/src/main/assets/ZipUtility3_Desc_JA_Short.htm
@@ -389,77 +389,86 @@ lang=JA style='font-family:"ＭＳ 明朝","serif"'>を選択してください。</span></p>
 
 <h1 style='margin-top:18.0pt'><a name="_Toc450110990"><span style='text-decoration:
 none'>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span><span
-lang=JA style='font-family:"ＭＳ ゴシック"'>画面説明</span></a></h1>
+lang=JA style='font-family:"ＭＳ ゴシック"'>操作</span></a></h1>
 
-<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>項目を選択して、アイコンをタップしてディレクトリー</span>/<span
+<p class=MsoNormal><span lang=JA style='font-family:"ＭＳ 明朝","serif"'>項目を選択すると画面下部に使用できるアイコンが表示されます。アイコンをタップする事でディレクトリー</span>/<span
 lang=JA style='font-family:"ＭＳ 明朝","serif"'>ファイルに対し操作を行います。アイコンを長押しすると説明が表示されます。</span></p>
 
 <p class=MsoNormal><img width=398 height=362 id="図 1"
 src="ZipUtility3_Desc_JA_Short.files/image002.png"></p>
 
+<span style='font-size:12.0pt;font-family:"Century","serif"'><br clear=all
+style='page-break-before:always'>
+</span>
+
+<p class=MsoNormal align=left style='text-align:left'><u><span
+style='font-size:14.0pt;font-family:"Arial","sans-serif"'><span
+ style='text-decoration:none'>&nbsp;</span></span></u></p>
+
 <h2 style='margin-top:18.0pt'>2.1 <span lang=JA style='font-family:"ＭＳ ゴシック"'>ローカルフォルダーアイコンの説明</span></h2>
 
-<p class=10CxSpFirst style='margin-left:21.25pt;text-indent:-21.25pt;
-line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
-width=23 height=23 id="図 4" src="ZipUtility3_Desc_JA_Short.files/image003.png"
-alt="context_button_clear"></span></span><span class=1105pt><span lang=JA
-style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>ディレクトリーまたはファイルの作成</span></span></p>
+<p class=10CxSpFirst style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
+margin-left:21.25pt;margin-bottom:.0001pt;text-indent:-21.25pt'><span
+class=1105pt><span style='font-size:10.5pt'><img width=23 height=23 id="図 4"
+src="ZipUtility3_Desc_JA_Short.files/image003.png" alt="context_button_clear"></span></span><span
+class=1105pt><span lang=JA style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>ディレクトリーまたはファイルの作成</span></span></p>
 
-<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
-line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
-width=23 height=23 id="図 5" src="ZipUtility3_Desc_JA_Short.files/image004.png"
+<p class=10CxSpMiddle style='margin-top:0cm;margin-right:0cm;margin-bottom:
+0cm;margin-left:21.25pt;margin-bottom:.0001pt;text-indent:-21.25pt'><span
+class=1105pt><span style='font-size:10.5pt'><img width=23 height=23 id="図 5"
+src="ZipUtility3_Desc_JA_Short.files/image004.png"
 alt="context_button_share_dark"></span></span><span class=1105pt><span lang=JA
 style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択されている項目を共有します</span></span></p>
 
-<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
-line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
-width=23 height=23 id="図 6" src="ZipUtility3_Desc_JA_Short.files/image005.png"
-alt="context_button_rename"></span></span><span class=1105pt><span lang=JA
-style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択された項目を改名します</span></span></p>
+<p class=10CxSpMiddle style='margin-top:0cm;margin-right:0cm;margin-bottom:
+0cm;margin-left:21.25pt;margin-bottom:.0001pt;text-indent:-21.25pt'><span
+class=1105pt><span style='font-size:10.5pt'><img width=23 height=23 id="図 6"
+src="ZipUtility3_Desc_JA_Short.files/image005.png" alt="context_button_rename"></span></span><span
+class=1105pt><span lang=JA style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択された項目を改名します</span></span></p>
 
-<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
-line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
-width=23 height=23 id="図 7" src="ZipUtility3_Desc_JA_Short.files/image006.png"
-alt="context_button_paste"></span></span><span class=1105pt><span lang=JA
-style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>コピーまたは切取った項目を貼付けます（切取った項目は貼付け終了後に削除されます）</span></span></p>
+<p class=10CxSpMiddle style='margin-top:0cm;margin-right:0cm;margin-bottom:
+0cm;margin-left:21.25pt;margin-bottom:.0001pt;text-indent:-21.25pt'><span
+class=1105pt><span style='font-size:10.5pt'><img width=23 height=23 id="図 7"
+src="ZipUtility3_Desc_JA_Short.files/image006.png" alt="context_button_paste"></span></span><span
+class=1105pt><span lang=JA style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>コピーまたは切取った項目を貼付けます（切取った項目は貼付け終了後に削除されます）</span></span></p>
 
-<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
-line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
-width=19 height=19 id="図 8" src="ZipUtility3_Desc_JA_Short.files/image007.png"
-alt="context_button_copy"></span></span><span class=1105pt><span lang=JA
-style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択された項目をコピーします</span></span></p>
+<p class=10CxSpMiddle style='margin-top:0cm;margin-right:0cm;margin-bottom:
+0cm;margin-left:21.25pt;margin-bottom:.0001pt;text-indent:-21.25pt'><span
+class=1105pt><span style='font-size:10.5pt'><img width=19 height=19 id="図 8"
+src="ZipUtility3_Desc_JA_Short.files/image007.png" alt="context_button_copy"></span></span><span
+class=1105pt><span lang=JA style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択された項目をコピーします</span></span></p>
 
-<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
-line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
-width=23 height=23 id="図 9" src="ZipUtility3_Desc_JA_Short.files/image008.png"
-alt="context_button_cut"></span></span><span class=1105pt><span lang=JA
-style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択された項目を切取ります</span></span></p>
+<p class=10CxSpMiddle style='margin-top:0cm;margin-right:0cm;margin-bottom:
+0cm;margin-left:21.25pt;margin-bottom:.0001pt;text-indent:-21.25pt'><span
+class=1105pt><span style='font-size:10.5pt'><img width=23 height=23 id="図 9"
+src="ZipUtility3_Desc_JA_Short.files/image008.png" alt="context_button_cut"></span></span><span
+class=1105pt><span lang=JA style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択された項目を切取ります</span></span></p>
 
-<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
-line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
-width=23 height=23 id="図 10" src="ZipUtility3_Desc_JA_Short.files/image009.png"
-alt="context_button_archive"></span></span><span class=1105pt><span lang=JA
-style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択された項目を圧縮します</span></span></p>
+<p class=10CxSpMiddle style='margin-top:0cm;margin-right:0cm;margin-bottom:
+0cm;margin-left:21.25pt;margin-bottom:.0001pt;text-indent:-21.25pt'><span
+class=1105pt><span style='font-size:10.5pt'><img width=23 height=23 id="図 10"
+src="ZipUtility3_Desc_JA_Short.files/image009.png" alt="context_button_archive"></span></span><span
+class=1105pt><span lang=JA style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択された項目を圧縮します</span></span></p>
 
-<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
-line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
-width=23 height=23 id="図 11" src="ZipUtility3_Desc_JA_Short.files/image010.png"
-alt="context_button_trash"></span></span><span class=1105pt><span lang=JA
-style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択された項目を削除します</span></span></p>
+<p class=10CxSpMiddle style='margin-top:0cm;margin-right:0cm;margin-bottom:
+0cm;margin-left:21.25pt;margin-bottom:.0001pt;text-indent:-21.25pt'><span
+class=1105pt><span style='font-size:10.5pt'><img width=23 height=23 id="図 11"
+src="ZipUtility3_Desc_JA_Short.files/image010.png" alt="context_button_trash"></span></span><span
+class=1105pt><span lang=JA style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>選択された項目を削除します</span></span></p>
 
-<p class=10CxSpMiddle style='margin-left:21.25pt;text-indent:-21.25pt;
-line-height:12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img
-width=23 height=23 id="図 13" src="ZipUtility3_Desc_JA_Short.files/image011.png"
+<p class=10CxSpMiddle style='margin-top:0cm;margin-right:0cm;margin-bottom:
+0cm;margin-left:21.25pt;margin-bottom:.0001pt;text-indent:-21.25pt'><span
+class=1105pt><span style='font-size:10.5pt'><img width=23 height=23 id="図 13"
+src="ZipUtility3_Desc_JA_Short.files/image011.png"
 alt="context_button_select_all"></span></span><span class=1105pt><span lang=JA
 style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>全て選択する</span></span></p>
 
-<p class=10CxSpLast style='margin-left:21.25pt;text-indent:-21.25pt;line-height:
-12.0pt'><span class=1105pt><span style='font-size:10.5pt'><img width=23
-height=23 id="図 12" src="ZipUtility3_Desc_JA_Short.files/image012.png"
+<p class=10CxSpLast style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
+margin-left:21.25pt;margin-bottom:.0001pt;text-indent:-21.25pt'><span
+class=1105pt><span style='font-size:10.5pt'><img width=23 height=23 id="図 12"
+src="ZipUtility3_Desc_JA_Short.files/image012.png"
 alt="context_button_unselect_all"></span></span><span class=1105pt><span
 lang=JA style='font-size:10.5pt;font-family:"ＭＳ 明朝","serif"'>全て選択解除する</span></span></p>
-
-<p class=MsoNormal>&nbsp;</p>
 
 <h2 style='margin-top:18.0pt'>2.1 ZIP<span lang=JA style='font-family:"ＭＳ ゴシック"'>フォルダーアイコンの説明</span></h2>
 
