--- a/app/src/main/assets/ZipUtility3_Change_JA.htm
+++ b/app/src/main/assets/ZipUtility3_Change_JA.htm
@@ -255,6 +255,23 @@ style='font-family:"ＭＳ ゴシック"'>更新履歴</span></a></h1>
 <p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
 text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
 src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span>2020/09/19 1.25</p>
+
+<p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
+left;text-indent:-21.25pt'><span style='font-family:Symbol'><img width=11
+height=11 src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span><span
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>検索結果をタップするとファイルを表示するようにした</span></p>
+
+<p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
+left;text-indent:-21.25pt'><span style='font-family:Symbol'><img width=11
+height=11 src="ZipUtility3_Change_JA.files/image002.png" alt="*"><span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp; </span></span><span
+lang=JA style='font-family:"ＭＳ 明朝","serif"'>検索時に進行を表示するようにした</span></p>
+
+<p class=MsoListParagraph align=left style='margin-left:21.0pt;text-align:left;
+text-indent:-21.0pt'><span style='font-family:Symbol'><img width=11 height=11
+src="ZipUtility3_Change_JA.files/image001.png" alt="*"><span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span>2020/09/09 1.24</p>
 
 <p class=MsoListParagraph align=left style='margin-left:42.55pt;text-align:
